[RLS] LocalFrameView::ScrollOrigin() should be 0,0

The document's negative horizontal overflow should be applied to the
layout viewport only. Currently it sets scroll origin based on
LayoutView::DocumentRect which is the LayoutView's layout overflow rect.
Incase of RLS it should be applied to the root PaintLayerScrollableArea only.
Added RLS enabled check to avoid wrong updation of scroll origin.

BUG=757636

Change-Id: I9e0f7ea31b71da7dcb81a40a661a45d5a150d65c
Reviewed-on: https://chromium-review.googlesource.com/628858
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: srirama chandra sekhar <srirama.m@samsung.com>
Cr-Commit-Position: refs/heads/master@{#497120}
Former-commit-id: e26a0a9d9246ab486707d49cd17a27688e239961