third_party/WebKit/Source/core/exported/WebFrameTest.cpp
@@ -8124,7 +8124,8 @@ TEST_P(ParameterizedWebFrameTest, MaximumScrollPositionCanBeNegative) {
   web_view_helper.WebView()->UpdateAllLifecyclePhases();
 
   LocalFrameView* frame_view = web_view_helper.LocalMainFrame()->GetFrameView();
-  EXPECT_LT(frame_view->MaximumScrollOffset().Width(), 0);
+  ScrollableArea* layout_viewport = frame_view->LayoutViewportScrollableArea();
+  EXPECT_LT(layout_viewport->MaximumScrollOffset().Width(), 0);
 }
 
 TEST_P(ParameterizedWebFrameTest, FullscreenLayerSize) {
